# youtube-summarizer

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  requirements.txt  spec.md
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-backend-filter-update/: 01-01-SUMMARY.md  deferred-items.md
.planning/phases/02-frontend-shell/: 02-01-SUMMARY.md
.planning/phases/03-browse-queue-tab/: 03-01-SUMMARY.md
.planning/phases/04-queue-progress-tab/: 04-01-SUMMARY.md
.planning/phases/05-summaries-tab/: 05-01-SUMMARY.md
.planning/phases/09-settings-tab-fixes/: 09-01-SUMMARY.md
.planning/phases/11-queue-improvements/: 11-01-SUMMARY.md  11-02-SUMMARY.md
.planning/phases/12-summaries-fixes/: 12-01-PLAN.md  12-01-SUMMARY.md
.planning/quick/260331-fg8-update-readme-md-to-reflect-current-proj/: 260331-fg8-SUMMARY.md
app/: cancel.py  config.py  database.py  main.py  settings.py  shutdown.py
app/queue/: worker.py
app/routers/: auth.py  browse.py  queue.py  settings.py  summaries.py
app/services/: keyframes.py  llm.py  ocr.py  pipeline.py  transcript.py  ytdlp.py
app/services/llm/: __init__.py  base.py  claude.py  codex.py  litellm.py  prompt.py
app/static/: app.js  index.html  style.css
docs/: cli.md
docs/module_design/: llm.md  ocr.md  transcript.md
tests/: conftest.py  test_auth.py  test_browse.py  test_cli.py  test_config.example.json  test_gpu.py  test_keyframes.py  test_llm.py  test_ocr.py  test_pipeline.py  test_pipeline_reuse.py  test_rerun.py  test_settings.py  test_transcript.py  test_ytdlp.py
(+2 files in other folders)
