[project]
name = "youtube-summarizer"
version = "0.0.1"
description = "Self-hosted web app that summarizes YouTube videos using keyframe extraction, OCR, and transcript analysis"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.86.0",
    "bitsandbytes>=0.49.2",
    "chandra-ocr[hf]>=0.2.0",
    "claude-agent-sdk>=0.1.53",
    "fastapi>=0.135.2",
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9",
    "google-genai>=1.69.0",
    "httpx>=0.28.1",
    "imagehash>=4.3.2",
    "openai>=2.30.0",
    "openai-whisper>=20250625",
    "pillow>=12.1.1",
    "python-multipart>=0.0.22",
    "scikit-image>=0.26.0",
    "uvicorn[standard]>=0.42.0",
    "yt-dlp>=2026.3.17",
    "yt-dlp-ejs>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
